--- a/public/css/details.css
+++ b/public/css/details.css
@@ -1,14 +1,14 @@
 .details-hide {
-    display: none;
+	display: none;
 }
 
 .secret-hide {
-    display: none;
+	display: none;
 }
-.row-background{
-    background-color: #F5F5F5;
+.row-background {
+	background-color: #f5f5f5;
 }
 
-.details-btn{
-    cursor: pointer;
+.details-btn {
+	cursor: pointer;
 }
